--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,16 @@ input {
   width: 20rem;
   font-size: 1.2rem;
 }
-input:focus {
+/* input:focus {
   background-color: bisque;
-}
+} */
 h1 {
   text-align: center;
   font-size: 3rem;
+}
+.valid {
+  background-color: green;
+}
+.invalid {
+  background-color: red;
 }
